made user offer applies

--- a/gwork.maui/MainPage.xaml
+++ b/gwork.maui/MainPage.xaml
@@ -30,8 +30,10 @@
                 </HorizontalStackLayout>
 
                 <SearchBar Placeholder="Wyszukaj oferty..." 
-                       HorizontalOptions="Center"
-                       WidthRequest="{OnIdiom 300, Desktop=600}"/>
+                           SearchCommand="{Binding SearchOfferCommand}"
+                           SearchCommandParameter="{Binding Source={RelativeSource Self}, Path=Text}"
+                           HorizontalOptions="Center"
+                           WidthRequest="{OnIdiom 300, Desktop=600}"/>
 
                 <CollectionView ItemsSource="{Binding Offers}">
                     <CollectionView.ItemsLayout>
