--- a/gwork.maui/Pages/UserDetailsPage.xaml
+++ b/gwork.maui/Pages/UserDetailsPage.xaml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodels="clr-namespace:gwork.maui.ViewModels"
              x:Class="gwork.maui.Pages.UserDetailsPage"
              Shell.NavBarIsVisible="False">
     <ScrollView>
-        <VerticalStackLayout VerticalOptions="Center" Padding="40">
+        <VerticalStackLayout VerticalOptions="Center" Padding="40, 20">
             <Label Text="Twój profil G-work" 
                FontSize="24" 
                FontAttributes="Bold"
@@ -78,10 +79,10 @@
                           RowSpacing="10" ColumnSpacing="10">
 
                         <Label Text="Dodatkowe informacje"
-                           Grid.Row="0"
-                           Grid.ColumnSpan="2"
-                           FontSize="24" 
-                           FontAttributes="Bold"/>
+                               Grid.Row="0"
+                               Grid.ColumnSpan="2"
+                               FontSize="24" 
+                               FontAttributes="Bold"/>
 
                         <Label Text="Wykształcenie: " 
                            Grid.Row="1" Grid.Column="0"
@@ -129,10 +130,45 @@
 
                 <Frame Grid.Row="{OnIdiom '1', Phone='2'}" Grid.Column="{OnIdiom '0', Phone='0'}" 
                        BorderColor="{DynamicResource Primary}" BackgroundColor="Transparent">
-                    <Grid RowDefinitions="auto,*,*,*,*,*,auto" ColumnDefinitions="auto, *"
-                          RowSpacing="10" ColumnSpacing="10">
+                    <StackLayout>
+                        <Label Text="Aplikacje do ofert"
+                               FontAttributes="Bold"
+                               FontSize="16"/>
+                        <CollectionView ItemsSource="{Binding AppliedOffers}" HorizontalOptions="FillAndExpand">
+                            <CollectionView.ItemsLayout>
+                                <GridItemsLayout Orientation="Vertical" Span="{OnIdiom '1', Desktop='2'}" HorizontalItemSpacing="10" VerticalItemSpacing="10"/>
+                            </CollectionView.ItemsLayout>
 
-                    </Grid>
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+                                    <Frame BorderColor="Black" BackgroundColor="Transparent">
+                                        <StackLayout Spacing="5">
+                                            <Label Text="{Binding PositionName}" FontAttributes="Bold" HorizontalOptions="FillAndExpand" LineBreakMode="TailTruncation" TextColor="{AppThemeBinding Light={StaticResource SecondaryDarkText}, Dark={StaticResource Secondary}}"/>
+                                            <Label Text="{Binding FirmName}" FontAttributes="Bold"/>
+                                            <Label Grid.Row="1" TextColor="{AppThemeBinding Light={StaticResource SecondaryDarkText}, Dark={StaticResource Secondary}}">
+                                                <Label.Text>
+                                                    <MultiBinding StringFormat="{}{0} - {1} zł">
+                                                        <Binding Path="SalaryLowest"/>
+                                                        <Binding Path="SalaryHighest"/>
+                                                    </MultiBinding>
+                                                </Label.Text>
+                                            </Label>
+                                            <StackLayout Orientation="Horizontal" Spacing="10">
+                                                <Button Text="Do oferty"
+                                                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:UserDetailsPageViewModel}}, Path=GoToOfferDetailsCommand}" 
+                                                    CommandParameter="{Binding .}"/>
+                                                <Button Text="Anuluj"
+                                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:UserDetailsPageViewModel}}, Path=DeleteUserOfferApplyCommand}" 
+                                                        CommandParameter="{Binding .}"
+                                                        BackgroundColor="#D21F3C"/>
+                                            </StackLayout>
+                                            <Label Text="{Binding ExpireDate, StringFormat='Koniec rekrutacji: {0:dd/MM/yyyy}'}"/>
+                                        </StackLayout>
+                                    </Frame>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+                    </StackLayout>
                 </Frame>
             </Grid>
         </VerticalStackLayout>
